--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "chai": "^4.1.2",
+    "express": "^4.16.4",
     "mocha": "^6.0.2",
+    "morgan": "^1.9.1",
     "random-flat-colors": "^1.0.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
