--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
+    "cors": "^2.8.5",
+    "errorhandler": "^1.5.0",
     "express": "^4.16.4",
     "mocha": "^6.0.2",
     "morgan": "^1.9.1",
